# heap-vs-stable-benchmarks

./: .gitignore  Cargo.toml  README.md  canbench.yml  canbench_results.yml  dfx.json
scripts/: report_markdown.py
src/: asset.rs  heap.rs  lib.rs  rand.rs  stable.rs  store.rs
src/bytes/: Cargo.toml  canbench.yml  canbench_results.yml  results.md
src/bytes/scripts/: report_markdown.py
src/bytes/src/: heap.rs  lib.rs  stable.rs  store.rs
src/candid/: asset.rs  mod.rs  stable.rs
src/cbor/: stable.rs
src/common/: Cargo.toml
src/common/src/: bytes.rs  lib.rs  rand.rs
src/heap-vs-stable-benchmark-backend/: Cargo.toml
src/stable/candid/: asset.rs  stable.rs
src/stable/cbor/: asset.rs  mod.rs  stable.rs  state.rs
src/struct/: Cargo.toml  canbench.yml  canbench_results.yml  results.md
src/struct/scripts/: report_markdown.py
src/struct/src/: lib.rs
src/struct/src/heap/: state.rs
src/struct/src/stable/: memory_manager.rs  mod.rs
src/struct/src/stable/candid/: state.rs
src/struct/src/stable/cbor/: state.rs
