[package]
name = "canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-stable-structures = "0.7"

serde = "1.0"

canbench-rs = { version = "0.2.1", optional = true }

[features]
canbench-rs = ["dep:canbench-rs"]
