[package]
name = "bytes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic0 = "1.0.0"

common = { workspace = true }

canbench-rs = { workspace = true, optional = true }

[features]
canbench-rs = ["dep:canbench-rs"]
