[package]
name = "struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = "0.7"

serde = { workspace = true }
serde_bytes = "0.11"
serde_cbor = "0.11"

common = { workspace = true }

canbench-rs = { workspace = true, optional = true }

[features]
canbench-rs = ["dep:canbench-rs"]
